---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
snapshot_kind: text
---
***Setup***

create table instruments (
    id bigint primary key generated always as identity,
    name text not null,
    z text, 
    created_at timestamp with time zone default now()
);


--------------

***Case 1:***

a|
alter |
alter t|
alter table |

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)

--------------

alter table i|

Results:
instruments - public.instruments (Table)
information_schema - information_schema (Schema)
information_schema.information_schema_catalog_name - information_schema.information_schema_catalog_name (Table)
public - public (Schema)
pg_catalog.pg_ident_file_mappings - pg_catalog.pg_ident_file_mappings (Table)

--------------

alter table instruments |
alter table instruments d|
alter table instruments drop |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table instruments drop c|

Results:
created_at - public.instruments.created_at (Column)
cache_size - pg_catalog.pg_sequences.cache_size (Column)
calls - pg_catalog.pg_stat_user_functions.calls (Column)
castcontext - pg_catalog.pg_cast.castcontext (Column)
castfunc - pg_catalog.pg_cast.castfunc (Column)

--------------

alter table instruments drop column |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table instruments drop column n|

Results:
name - public.instruments.name (Column)
n_dead_tup - pg_catalog.pg_stat_all_tables.n_dead_tup (Column)
n_distinct - pg_catalog.pg_stats.n_distinct (Column)
n_ins_since_vacuum - pg_catalog.pg_stat_all_tables.n_ins_since_vacuum (Column)
n_live_tup - pg_catalog.pg_stat_all_tables.n_live_tup (Column)

--------------

alter table instruments drop column name |




***Case 2:***

a|
alter |
alter t|
alter table |

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)

--------------

alter table i|

Results:
instruments - public.instruments (Table)
information_schema - information_schema (Schema)
information_schema.information_schema_catalog_name - information_schema.information_schema_catalog_name (Table)
public - public (Schema)
pg_catalog.pg_ident_file_mappings - pg_catalog.pg_ident_file_mappings (Table)

--------------

alter table instruments |
alter table instruments d|
alter table instruments drop |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table instruments drop c|

Results:
created_at - public.instruments.created_at (Column)
cache_size - pg_catalog.pg_sequences.cache_size (Column)
calls - pg_catalog.pg_stat_user_functions.calls (Column)
castcontext - pg_catalog.pg_cast.castcontext (Column)
castfunc - pg_catalog.pg_cast.castfunc (Column)

--------------

alter table instruments drop column |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table instruments drop column i|

Results:
id - public.instruments.id (Column)
ident - pg_catalog.pg_backend_memory_contexts.ident (Column)
identity_cycle - information_schema.columns.identity_cycle (Column)
identity_generation - information_schema.columns.identity_generation (Column)
identity_increment - information_schema.columns.identity_increment (Column)

--------------

alter table instruments drop column if |
alter table instruments drop column if e|
alter table instruments drop column if exists |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table instruments drop column if exists n|

Results:
name - public.instruments.name (Column)
n_dead_tup - pg_catalog.pg_stat_all_tables.n_dead_tup (Column)
n_distinct - pg_catalog.pg_stats.n_distinct (Column)
n_ins_since_vacuum - pg_catalog.pg_stat_all_tables.n_ins_since_vacuum (Column)
n_live_tup - pg_catalog.pg_stat_all_tables.n_live_tup (Column)

--------------

alter table instruments drop column if exists name |




***Case 3:***

a|
alter |
alter t|
alter table |

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)

--------------

alter table i|

Results:
instruments - public.instruments (Table)
information_schema - information_schema (Schema)
information_schema.information_schema_catalog_name - information_schema.information_schema_catalog_name (Table)
public - public (Schema)
pg_catalog.pg_ident_file_mappings - pg_catalog.pg_ident_file_mappings (Table)

--------------

alter table instruments |
alter table instruments a|
alter table instruments alter |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table instruments alter c|

Results:
created_at - public.instruments.created_at (Column)
cache_size - pg_catalog.pg_sequences.cache_size (Column)
calls - pg_catalog.pg_stat_user_functions.calls (Column)
castcontext - pg_catalog.pg_cast.castcontext (Column)
castfunc - pg_catalog.pg_cast.castfunc (Column)

--------------

alter table instruments alter column |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table instruments alter column n|

Results:
name - public.instruments.name (Column)
n_dead_tup - pg_catalog.pg_stat_all_tables.n_dead_tup (Column)
n_distinct - pg_catalog.pg_stats.n_distinct (Column)
n_ins_since_vacuum - pg_catalog.pg_stat_all_tables.n_ins_since_vacuum (Column)
n_live_tup - pg_catalog.pg_stat_all_tables.n_live_tup (Column)

--------------

alter table instruments alter column name |
alter table instruments alter column name s|
alter table instruments alter column name set |
alter table instruments alter column name set d|
alter table instruments alter column name set default |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
instruments - public.instruments (Table)

--------------





***Case 4:***

a|
alter |
alter t|
alter table |

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)

--------------

alter table i|

Results:
instruments - public.instruments (Table)
information_schema - information_schema (Schema)
information_schema.information_schema_catalog_name - information_schema.information_schema_catalog_name (Table)
public - public (Schema)
pg_catalog.pg_ident_file_mappings - pg_catalog.pg_ident_file_mappings (Table)

--------------

alter table instruments |
alter table instruments a|
alter table instruments alter |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table instruments alter n|

Results:
name - public.instruments.name (Column)
n_dead_tup - pg_catalog.pg_stat_all_tables.n_dead_tup (Column)
n_distinct - pg_catalog.pg_stats.n_distinct (Column)
n_ins_since_vacuum - pg_catalog.pg_stat_all_tables.n_ins_since_vacuum (Column)
n_live_tup - pg_catalog.pg_stat_all_tables.n_live_tup (Column)

--------------

alter table instruments alter name |
alter table instruments alter name s|
alter table instruments alter name set |
alter table instruments alter name set d|
alter table instruments alter name set default |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
instruments - public.instruments (Table)

--------------





***Case 5:***

a|
alter |
alter t|
alter table |

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)

--------------

alter table p|

Results:
public - public (Schema)
information_schema.parameters - information_schema.parameters (Table)
pg_catalog.pg_aggregate - pg_catalog.pg_aggregate (Table)
pg_catalog.pg_am - pg_catalog.pg_am (Table)
pg_catalog.pg_amop - pg_catalog.pg_amop (Table)

--------------

alter table public.|

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)

--------------

alter table public.i|

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)

--------------

alter table public.instruments |
alter table public.instruments a|
alter table public.instruments alter |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table public.instruments alter c|

Results:
created_at - public.instruments.created_at (Column)
cache_size - pg_catalog.pg_sequences.cache_size (Column)
calls - pg_catalog.pg_stat_user_functions.calls (Column)
castcontext - pg_catalog.pg_cast.castcontext (Column)
castfunc - pg_catalog.pg_cast.castfunc (Column)

--------------

alter table public.instruments alter column |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table public.instruments alter column n|

Results:
name - public.instruments.name (Column)
n_dead_tup - pg_catalog.pg_stat_all_tables.n_dead_tup (Column)
n_distinct - pg_catalog.pg_stats.n_distinct (Column)
n_ins_since_vacuum - pg_catalog.pg_stat_all_tables.n_ins_since_vacuum (Column)
n_live_tup - pg_catalog.pg_stat_all_tables.n_live_tup (Column)

--------------

alter table public.instruments alter column name |




***Case 6:***

a|
alter |
alter t|
alter table |

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)

--------------

alter table i|

Results:
instruments - public.instruments (Table)
information_schema - information_schema (Schema)
information_schema.information_schema_catalog_name - information_schema.information_schema_catalog_name (Table)
public - public (Schema)
pg_catalog.pg_ident_file_mappings - pg_catalog.pg_ident_file_mappings (Table)

--------------

alter table instruments |
alter table instruments a|
alter table instruments alter |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table instruments alter n|

Results:
name - public.instruments.name (Column)
n_dead_tup - pg_catalog.pg_stat_all_tables.n_dead_tup (Column)
n_distinct - pg_catalog.pg_stats.n_distinct (Column)
n_ins_since_vacuum - pg_catalog.pg_stat_all_tables.n_ins_since_vacuum (Column)
n_live_tup - pg_catalog.pg_stat_all_tables.n_live_tup (Column)

--------------

alter table instruments alter name |




***Case 7:***

a|
alter |
alter t|
alter table |

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)

--------------

alter table i|

Results:
instruments - public.instruments (Table)
information_schema - information_schema (Schema)
information_schema.information_schema_catalog_name - information_schema.information_schema_catalog_name (Table)
public - public (Schema)
pg_catalog.pg_ident_file_mappings - pg_catalog.pg_ident_file_mappings (Table)

--------------

alter table instruments |
alter table instruments r|
alter table instruments rename |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table instruments rename n|

Results:
name - public.instruments.name (Column)
n_dead_tup - pg_catalog.pg_stat_all_tables.n_dead_tup (Column)
n_distinct - pg_catalog.pg_stats.n_distinct (Column)
n_ins_since_vacuum - pg_catalog.pg_stat_all_tables.n_ins_since_vacuum (Column)
n_live_tup - pg_catalog.pg_stat_all_tables.n_live_tup (Column)

--------------

alter table instruments rename name |
alter table instruments rename name t|
alter table instruments rename name to |
alter table instruments rename name to n|
alter table instruments rename name to new_col |




***Case 8:***

a|
alter |
alter t|
alter table |

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)
pg_toast - pg_toast (Schema)

--------------

alter table p|

Results:
public - public (Schema)
information_schema.parameters - information_schema.parameters (Table)
pg_catalog.pg_aggregate - pg_catalog.pg_aggregate (Table)
pg_catalog.pg_am - pg_catalog.pg_am (Table)
pg_catalog.pg_amop - pg_catalog.pg_amop (Table)

--------------

alter table public.|

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)

--------------

alter table public.i|

Results:
instruments - public.instruments (Table)
_sqlx_migrations - public._sqlx_migrations (Table)

--------------

alter table public.instruments |
alter table public.instruments r|
alter table public.instruments rename |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table public.instruments rename c|

Results:
created_at - public.instruments.created_at (Column)
cache_size - pg_catalog.pg_sequences.cache_size (Column)
calls - pg_catalog.pg_stat_user_functions.calls (Column)
castcontext - pg_catalog.pg_cast.castcontext (Column)
castfunc - pg_catalog.pg_cast.castfunc (Column)

--------------

alter table public.instruments rename column |

Results:
created_at - public.instruments.created_at (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
abbrev - pg_catalog.pg_timezone_abbrevs.abbrev (Column)

--------------

alter table public.instruments rename column n|

Results:
name - public.instruments.name (Column)
n_dead_tup - pg_catalog.pg_stat_all_tables.n_dead_tup (Column)
n_distinct - pg_catalog.pg_stats.n_distinct (Column)
n_ins_since_vacuum - pg_catalog.pg_stat_all_tables.n_ins_since_vacuum (Column)
n_live_tup - pg_catalog.pg_stat_all_tables.n_live_tup (Column)

--------------

alter table public.instruments rename column name |
alter table public.instruments rename column name t|
alter table public.instruments rename column name to |
alter table public.instruments rename column name to n|
alter table public.instruments rename column name to new_col |
